package Homework2;

public interface ResearchMethods {

    static void printAllRelatives(String name, FamilyHistory tree, Relation someRelation) {

    }
}
