package Seminar1;

public enum Relation {
    CHILD,
    GRANDCHILD,
    GRANDPARENT,
    PARENT,
    SIBLING


}
