@startuml
'https://plantuml.com/class-diagram


abstract class Human
class Person
Human <|- Person

enum Relation{
    CHILD,
    GRANDCHILD,
    GRANDPARENT,
    PARENT,
    SIBLING
    }

class Research
interface ResearchMethods
class Research implements ResearchMethods



abstract class FamilyHistory
class Tree
FamilyHistory <|-- Tree
class Link

class App
Tree<..App
Person<..App
Relation<..App
Research<..App

Link<.. FamilyHistory
Human<.. FamilyHistory
Relation<.. FamilyHistory

Human<.. Link
Relation<.. Link

Relation<.. Research
FamilyHistory<.. Research
Link<.. Research

Link<.. Tree
Human<.. Tree



@enduml